# netology_cpp_homework

./: .gitignore  README.md
01_cpps-homework/hw.01/: readme.md
01_cpps-homework/hw.02/task.01/: hw.02.01.cpp
01_cpps-homework/hw.02/task.02/: hw.02.02.cpp
01_cpps-homework/hw.03/task.01/: hw.03.01.cpp
01_cpps-homework/hw.03/task.02/: hw.03.02.cpp
01_cpps-homework/hw.04/task.01/: hw.04.01.cpp
01_cpps-homework/hw.09/hw.09.01/: hw.09.01.cpp
03_cppm-homework/cppm-diplom/src/: Racing.cpp
03_cppm-homework/hw.02/task.02/: hw.02.02.cpp
03_cppm-homework/hw.05/task.03/: hw.03.vcxproj
03_cppm-homework/hw.06/task.02/: countr.cpp
03_cppm-homework/hw.06/task.03/: 01.1_rt.h
03_cppm-homework/hw.08/task.01/: hw.01.cpp
03_cppm-homework/hw.08/task.02/: 02.1.2.0_rect.cpp  0_Figure.cpp  ValError.h
03_cppm-homework/hw.09/task.02/: hw.02.cpp
03_cppm-homework/hw.10/task.01/: task.01.cpp
03_cppm-homework/hw.11/task.01/src/: CMakeLists.txt
04_algocpp-homework/hw.01/02/: hw.01.02.cpp
04_algocpp-homework/hw.03/01/: hw.03.01.cpp
04_algocpp-homework/hw.03/02/: hw.03.02.cpp
04_algocpp-homework/hw.05/02/: hw.05.02.cpp
04_algocpp-homework/hw.08/02/: input2.txt
05_cppl-homework/: .gitignore
05_cppl-homework/hw.02/task.01/: task.02.01.sln  task.02.01.vcxproj
05_cppl-homework/hw.02/task.02.01/: task.02.01.cpp
05_cppl-homework/hw.03/task.03.02/: CMakeLists.txt
05_cppl-homework/hw.04/task.01/: CMakeLists.txt
05_cppl-homework/hw.04/task.01/lib/: CMakeLists.txt  ListNode.h
05_cppl-homework/hw.04/task.01/src/: main.cpp
05_cppl-homework/hw.04/task.01/test/: CMakeLists.txt
06_sqlcpp-homework/hw.03/: README.md  module2_10.sql
07_map-homework/diplom/: CMakeLists.txt
07_map-homework/diplom/lib/: CMakeLists.txt  SafeQueue.h
07_map-homework/diplom/src/: main.cpp
07_map-homework/hw.04/: shape.cpp  shape.h
09_qtcpp-homework/: .gitignore
09_qtcpp-homework/diplom/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
09_qtcpp-homework/diplom/libs/parser/: CMakeLists.txt  dbinfo.ini
09_qtcpp-homework/hw.06/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
09_qtcpp-homework/hw.07/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
09_qtcpp-homework/hw.08/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h
09_qtcpp-homework/hw.09/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
10_iot-homework/hw.05/: README.md
10_iot-homework/hw.06/: README.md
10_iot-homework/hw.07/: README.md
10_iot-homework/hw.08/: README.md
10_iot-homework/hw.09/: README.md
11_pue-homework/: README.md
11_pue-homework/Blueprints/: TestThree.uproject
11_pue-homework/LeaveMeAlone/: .gitignore  LeaveMeAlone.uproject
11_pue-homework/task_11.05/: LMADefaultCharacter.cpp  LMADefaultCharacter.h
11_pue-homework/task_11.06/: LMADefaultCharacter.cpp  LMADefaultCharacter.h
12_fcpp/: CMakeLists.txt  README.md  crawlerdata.ini  info.ini  main.cpp  search_engine.ini
12_fcpp/libs/: .gitignore
12_fcpp/libs/dbmanager/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  DatabasePool.cpp  DatabasePool.h
12_fcpp/libs/parser/: CMakeLists.txt  IniParser.cpp  IniParser.h
12_fcpp/libs/secqueue/: CMakeLists.txt  SafeQueue.h  ThreadPool.cpp  ThreadPool.h
12_fcpp/libs/serverutils/: CMakeLists.txt  ServerHttpUtils.cpp  ServerHttpUtils.h
12_fcpp/libs/utils/: CMakeLists.txt  HTTPUtils.cpp  HTTPUtils.h  HtmlParser.cpp  HtmlParser.h  Indexer.cpp  Indexer.h  UrlParser.cpp  UrlParser.h  struct.h
12_fcpp/src/crawler/: CMakeLists.txt  Crawler.cpp  Crawler.h
12_fcpp/src/searchengine/: CMakeLists.txt  SearchEngine.cpp  SearchEngine.h  main_search.cpp
1_cpps-homework/HW_1.6/: Untitled-1.cpp
1_cpps-homework/hw.01/: hw.01.01.cpp
3_cppm-homework/: .gitignore
3_cppm-homeworks/cppm-diplom/src/: CMakeLists.txt  aSession.cpp
3_cppm-homeworks/cppm-diplom/src/AirTs/: broom.cpp  broom.h  carpet.cpp  carpet.h  eagle.cpp  eagle.h
3_cppm-homeworks/cppm-diplom/src/GndTs/: GndTs.h  boots.cpp  centaur.cpp  vehicle.cpp  vehicle.h
3_cppm-homeworks/hw.10/task.02/src/: CMakeLists.txt
3_cppm-homeworks/hw.10/task.02/src/libs/: 01.0_triangle.cpp  01.1_rt.cpp  01.3_et.cpp  02.1.1_rhomb.cpp  02.1.1_rhomb.h  CMakeLists.txt
3_cppm-homeworks/hw.11/task.02/src/: CMakeLists.txt  TestDynLib.cpp  TestDynLib.h  main.cpp
4_algocpp-homework/: README.md
5_cppl-homework/: .gitignore  README.md
5_cppl-homework/diplom/: CMakeLists.txt  test.ini
5_cppl-homework/diplom/lib/: CMakeLists.txt  IniParser.h
5_cppl-homework/diplom/project/src/: CMakeLists.txt
5_cppl-homework/diplom/scripts/: CMakeLists.txt
5_cppl-homework/diplom/settings/: info.ini
5_cppl-homework/diplom/src/: CMakeLists.txt  main.cpp
5_cppl-homework/hw.04/task.04.02/: CMakeLists.txt
5_cppl-homework/hw.04/task.04.02/test/: test-main.cpp
5_cppl-homework/hw.09/task.02/: CMakeLists.txt
5_cppl-homework/hw.09/task.02/libs/: BigInt.h
6_sqlcpp-homework/hw.03/: Module2_2.sql  Module2_3.sql  Module2_5.sql  Module2_6.sql  Module2_8.sql  Module2_9.sql  module2_01.sql  module2_04.sql  module2_07.sql
6_sqlcpp-homework/hw.04/: hw04.0-create.sql
6_sqlcpp-homework/hw.05/: CMakeLists.txt  dbinfo.ini  info.txt
6_sqlcpp-homework/hw.05/libs/: .gitignore
6_sqlcpp-homework/hw.05/libs/dbfileinfo/: CMakeLists.txt  dbFileInfo.cpp  dbFileInfo.h
6_sqlcpp-homework/hw.05/libs/dbx/: CMakeLists.txt  dbx.cpp  dbx.h
6_sqlcpp-homework/hw.05/libs/libpqxx-7.9.0/: .gitignore
6_sqlcpp-homework/hw.05/libs/parser/: CMakeLists.txt  IniParser.h
6_sqlcpp-homework/hw.05/settings/: 1_CreateTables.sql
6_sqlcpp-homework/hw.05/sql/: 2_InsertData.sql
6_sqlcpp-homework/hw.05/src/: CMakeLists.txt  info.txt  main.cpp
7_map-homework/diplom/: CMakeLists.txt
7_map-homework/diplom/lib/: ThreadPool.cpp  ThreadPool.h
7_map-homework/hw.02/: async_expl.cpp
7_map-homework/hw.04/: shape.cpp  shape.h
9_qtcpp-homework/hw.08/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+861 files in other folders)
